--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
     <!-- Bootstrap core CSS-->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/sapta-tour.css" rel="stylesheet">
+    <script src="js/libs/modernizr.custom.js"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries--><!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
@@ -18,10 +19,10 @@
   <body>
     <nav role="navigation" class="navbar">
       <div class="container">
-        <div class="navbar-header"><a href="#" title="TS Starter" class="navbar-brand"><img src="img/sapta-tour-logo.png" title="TS Starter"></a></div>
+        <div class="navbar-header"><a href="index.html" title="TS Starter" class="navbar-brand"><img src="img/sapta-tour-logo.png" title="TS Starter"></a></div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav main-menu">
-            <li class="active"><a href="#"><i class="ico ico-tours"></i><span class="block">TOURS</span></a></li>
+            <li class="active"><a href="tours.html"><i class="ico ico-tours"></i><span class="block">TOURS</span></a></li>
             <li><a href="#flights"><i class="ico ico-flight"></i><span class="block">BOOK FLIGHTS</span></a></li>
             <li><a href="#hotels" class="hotel"><i class="ico ico-hotel"></i><span class="block">BOOK HOTELS</span></a></li>
             <li><a href="#documents"><i class="ico ico-document"></i><span class="block">DOCUMENTS</span></a></li>
@@ -184,7 +185,7 @@
     <div class="footer">
       <div class="container">
         <div class="row">
-          <div class="col-md-3 colomn first"><img src="img/sapta-tour-logo-medium.png" alt="" class="m-t-sm"><img src="img/24-hours-tours-and-travel-service.png" alt="24 Hours Tours &amp; Travel  Service" class="m-t-xl block"></div>
+          <div class="col-md-3 colomn first"><a href="index.html"><img src="img/sapta-tour-logo-medium.png" alt="" class="m-t-sm"></a><img src="img/24-hours-tours-and-travel-service.png" alt="24 Hours Tours &amp; Travel  Service" class="m-t-xl block"></div>
           <div class="col-md-3 colomn office">
             <h6 class="text-u-c">Our Office</h6>
             <p>Sapta Tours &amp; Travel <br />Jl. Panglima Polim Raya 18-D <br />Jakarta Selatan 12130 <br />Indonesia</p>
