fixing overwrite css

--- a/app/tours.html
+++ b/app/tours.html
@@ -51,8 +51,8 @@
             <div class="wrapper-md">
               <label class="text-light text-sm text-u-c block">Europe</label><a href="tour-detail.html" class="text-lg title text-u-c">Russia Scandinavia</a>
             </div>
-            <div class="bg-white pos-rtl"><a href="tour-detail.html" class="days-trip text-center"><i class="ico ico-time"></i><span class="count">7</span>
-                <label class="text-u-c text-sm">DAYS</label></a><a href="tour-detail.html" class="pricing text-center">
+            <div class="bg-white pos-rtl"><a href="tour-detail.html" class="days-trip tour text-center"><i class="ico ico-time"></i><span class="count">7</span>
+                <label class="text-u-c text-sm">DAYS</label></a><a href="tour-detail.html" class="pricing tour text-center">
                 <label class="block text-u-c">FROM</label><span class="currency"> $</span><span class="price">400</span></a></div>
           </div>
           <div class="rollover bg-orange pos-abt">
@@ -70,8 +70,8 @@
             <div class="wrapper-md">
               <label class="text-light text-sm text-u-c block">Asia</label><a href="tour-detail.html" class="text-lg title text-u-c">KOrea Winter Sky Resort</a>
             </div>
-            <div class="bg-white pos-rtl"><a href="tour-detail.html" class="days-trip text-center"><i class="ico ico-time"></i><span class="count">7</span>
-                <label class="text-u-c text-sm">DAYS</label></a><a href="tour-detail.html" class="pricing text-center">
+            <div class="bg-white pos-rtl"><a href="tour-detail.html" class="days-trip tour text-center"><i class="ico ico-time"></i><span class="count">7</span>
+                <label class="text-u-c text-sm">DAYS</label></a><a href="tour-detail.html" class="pricing tour text-center">
                 <label class="block text-u-c">FROM</label><span class="currency"> $</span><span class="price">1000</span></a></div>
           </div>
           <div class="rollover bg-orange pos-abt">
@@ -89,8 +89,8 @@
             <div class="wrapper-md">
               <label class="text-light text-sm text-u-c block">Oceania</label><a href="tour-detail.html" class="text-lg title text-u-c">New Zealand Hobbiton</a>
             </div>
-            <div class="bg-white pos-rtl"><a href="tour-detail.html" class="days-trip text-center"><i class="ico ico-time"></i><span class="count">7</span>
-                <label class="text-u-c text-sm">DAYS</label></a><a href="tour-detail.html" class="pricing text-center">
+            <div class="bg-white pos-rtl"><a href="tour-detail.html" class="days-trip tour text-center"><i class="ico ico-time"></i><span class="count">7</span>
+                <label class="text-u-c text-sm">DAYS</label></a><a href="tour-detail.html" class="pricing tour text-center">
                 <label class="block text-u-c">FROM</label><span class="currency"> $</span><span class="price">3000</span></a></div>
           </div>
           <div class="rollover bg-orange pos-abt">
@@ -108,8 +108,8 @@
             <div class="wrapper-md">
               <label class="text-light text-sm text-u-c block">Asia</label><a href="tour-detail.html" class="text-lg title text-u-c">Kyoto’s hidden Gems</a>
             </div>
-            <div class="bg-white pos-rtl"><a href="tour-detail.html" class="days-trip text-center"><i class="ico ico-time"></i><span class="count">7</span>
-                <label class="text-u-c text-sm">DAYS</label></a><a href="tour-detail.html" class="pricing text-center">
+            <div class="bg-white pos-rtl"><a href="tour-detail.html" class="days-trip tour text-center"><i class="ico ico-time"></i><span class="count">7</span>
+                <label class="text-u-c text-sm">DAYS</label></a><a href="tour-detail.html" class="pricing tour text-center">
                 <label class="block text-u-c">FROM</label><span class="currency"> $</span><span class="price">2500</span></a></div>
           </div>
           <div class="rollover bg-orange pos-abt">
@@ -127,8 +127,8 @@
             <div class="wrapper-md">
               <label class="text-light text-sm text-u-c block">Europe</label><a href="tour-detail.html" class="text-lg title text-u-c">Russia Scandinavia</a>
             </div>
-            <div class="bg-white pos-rtl"><a href="tour-detail.html" class="days-trip text-center"><i class="ico ico-time"></i><span class="count">7</span>
-                <label class="text-u-c text-sm">DAYS</label></a><a href="tour-detail.html" class="pricing text-center">
+            <div class="bg-white pos-rtl"><a href="tour-detail.html" class="days-trip tour text-center"><i class="ico ico-time"></i><span class="count">7</span>
+                <label class="text-u-c text-sm">DAYS</label></a><a href="tour-detail.html" class="pricing tour text-center">
                 <label class="block text-u-c">FROM</label><span class="currency"> $</span><span class="price">400</span></a></div>
           </div>
           <div class="rollover bg-orange pos-abt">
@@ -146,8 +146,8 @@
             <div class="wrapper-md">
               <label class="text-light text-sm text-u-c block">Asia</label><a href="tour-detail.html" class="text-lg title text-u-c">Manina Bay Singapore</a>
             </div>
-            <div class="bg-white pos-rtl"><a href="tour-detail.html" class="days-trip text-center"><i class="ico ico-time"></i><span class="count">7</span>
-                <label class="text-u-c text-sm">DAYS</label></a><a href="tour-detail.html" class="pricing text-center">
+            <div class="bg-white pos-rtl"><a href="tour-detail.html" class="days-trip tour text-center"><i class="ico ico-time"></i><span class="count">7</span>
+                <label class="text-u-c text-sm">DAYS</label></a><a href="tour-detail.html" class="pricing tour text-center">
                 <label class="block text-u-c">FROM</label><span class="currency"> $</span><span class="price">400</span></a></div>
           </div>
           <div class="rollover bg-orange pos-abt">
@@ -165,8 +165,8 @@
             <div class="wrapper-md">
               <label class="text-light text-sm text-u-c block">Europe</label><a href="tour-detail.html" class="text-lg title text-u-c">Eastern Europe</a>
             </div>
-            <div class="bg-white pos-rtl"><a href="tour-detail.html" class="days-trip text-center"><i class="ico ico-time"></i><span class="count">7</span>
-                <label class="text-u-c text-sm">DAYS</label></a><a href="tour-detail.html" class="pricing text-center">
+            <div class="bg-white pos-rtl"><a href="tour-detail.html" class="days-trip tour text-center"><i class="ico ico-time"></i><span class="count">7</span>
+                <label class="text-u-c text-sm">DAYS</label></a><a href="tour-detail.html" class="pricing tour text-center">
                 <label class="block text-u-c">FROM</label><span class="currency"> $</span><span class="price">400</span></a></div>
           </div>
           <div class="rollover bg-orange pos-abt">
@@ -184,8 +184,8 @@
             <div class="wrapper-md">
               <label class="text-light text-sm text-u-c block">Asia</label><a href="tour-detail.html" class="text-lg title text-u-c">Beautiful Jiu ZHai Gou and Beyond</a>
             </div>
-            <div class="bg-white pos-rtl"><a href="tour-detail.html" class="days-trip text-center"><i class="ico ico-time"></i><span class="count">7</span>
-                <label class="text-u-c text-sm">DAYS</label></a><a href="tour-detail.html" class="pricing text-center">
+            <div class="bg-white pos-rtl"><a href="tour-detail.html" class="days-trip tour text-center"><i class="ico ico-time"></i><span class="count">7</span>
+                <label class="text-u-c text-sm">DAYS</label></a><a href="tour-detail.html" class="pricing tour text-center">
                 <label class="block text-u-c">FROM</label><span class="currency"> $</span><span class="price">400</span></a></div>
           </div>
           <div class="rollover bg-orange pos-abt">
@@ -203,8 +203,8 @@
             <div class="wrapper-md">
               <label class="text-light text-sm text-u-c block">Europe</label><a href="tour-detail.html" class="text-lg title text-u-c">Russia Scandinavia</a>
             </div>
-            <div class="bg-white pos-rtl"><a href="tour-detail.html" class="days-trip text-center"><i class="ico ico-time"></i><span class="count">7</span>
-                <label class="text-u-c text-sm">DAYS</label></a><a href="tour-detail.html" class="pricing text-center">
+            <div class="bg-white pos-rtl"><a href="tour-detail.html" class="days-trip tour text-center"><i class="ico ico-time"></i><span class="count">7</span>
+                <label class="text-u-c text-sm">DAYS</label></a><a href="tour-detail.html" class="pricing tour text-center">
                 <label class="block text-u-c">FROM</label><span class="currency"> $</span><span class="price">400</span></a></div>
           </div>
           <div class="rollover bg-orange pos-abt">
@@ -222,8 +222,8 @@
             <div class="wrapper-md">
               <label class="text-light text-sm text-u-c block">Europe</label><a href="tour-detail.html" class="text-lg title text-u-c">Russia Scandinavia</a>
             </div>
-            <div class="bg-white pos-rtl"><a href="tour-detail.html" class="days-trip text-center"><i class="ico ico-time"></i><span class="count">7</span>
-                <label class="text-u-c text-sm">DAYS</label></a><a href="tour-detail.html" class="pricing text-center">
+            <div class="bg-white pos-rtl"><a href="tour-detail.html" class="days-trip tour text-center"><i class="ico ico-time"></i><span class="count">7</span>
+                <label class="text-u-c text-sm">DAYS</label></a><a href="tour-detail.html" class="pricing tour text-center">
                 <label class="block text-u-c">FROM</label><span class="currency"> $</span><span class="price">400</span></a></div>
           </div>
           <div class="rollover bg-orange pos-abt">
@@ -241,8 +241,8 @@
             <div class="wrapper-md">
               <label class="text-light text-sm text-u-c block">Europe</label><a href="tour-detail.html" class="text-lg title text-u-c">Russia Scandinavia</a>
             </div>
-            <div class="bg-white pos-rtl"><a href="tour-detail.html" class="days-trip text-center"><i class="ico ico-time"></i><span class="count">7</span>
-                <label class="text-u-c text-sm">DAYS</label></a><a href="tour-detail.html" class="pricing text-center">
+            <div class="bg-white pos-rtl"><a href="tour-detail.html" class="days-trip tour text-center"><i class="ico ico-time"></i><span class="count">7</span>
+                <label class="text-u-c text-sm">DAYS</label></a><a href="tour-detail.html" class="pricing tour text-center">
                 <label class="block text-u-c">FROM</label><span class="currency"> $</span><span class="price">400</span></a></div>
           </div>
           <div class="rollover bg-orange pos-abt">
@@ -260,8 +260,8 @@
             <div class="wrapper-md">
               <label class="text-light text-sm text-u-c block">Europe</label><a href="tour-detail.html" class="text-lg title text-u-c">Russia Scandinavia</a>
             </div>
-            <div class="bg-white pos-rtl"><a href="tour-detail.html" class="days-trip text-center"><i class="ico ico-time"></i><span class="count">7</span>
-                <label class="text-u-c text-sm">DAYS</label></a><a href="tour-detail.html" class="pricing text-center">
+            <div class="bg-white pos-rtl"><a href="tour-detail.html" class="days-trip tour text-center"><i class="ico ico-time"></i><span class="count">7</span>
+                <label class="text-u-c text-sm">DAYS</label></a><a href="tour-detail.html" class="pricing tour text-center">
                 <label class="block text-u-c">FROM</label><span class="currency"> $</span><span class="price">400</span></a></div>
           </div>
           <div class="rollover bg-orange pos-abt">
