--- a/app/tour-detail.html
+++ b/app/tour-detail.html
@@ -44,8 +44,8 @@
       <div class="container">
         <div class="featured-tour-detail m-t-lg">
           <figure class="feature-image pos-rlt"><img src="img/destinations/Paris-02.jpg" alt="">
-            <div class="info bg-white pos-abt"><a href="tour-detail.html" class="days-trip text-center"><i class="ico ico-time"></i><span class="count">10</span>
-                <label class="text-u-c text-sm">DAYS</label></a><a href="tour-detail.html" class="pricing text-center">
+            <div class="info bg-white pos-abt"><a href="tour-detail.html" class="days-trip tour text-center"><i class="ico ico-time"></i><span class="count">10</span>
+                <label class="text-u-c text-sm">DAYS</label></a><a href="tour-detail.html" class="pricing tour text-center">
                 <label class="block text-u-c text-light">FROM</label><span class="currency"> $</span><span class="price">3500</span></a></div>
           </figure>
         </div>
