--- a/app/index.html
+++ b/app/index.html
@@ -17,25 +17,62 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
   </head>
   <body>
-    <nav role="navigation" class="navbar">
+    <div role="navigation" class="navbar">
       <div class="container">
         <div class="navbar-header"><a href="index.html" title="TS Starter" class="navbar-brand"><img src="img/sapta-tour-logo.png" title="TS Starter"></a></div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav main-menu">
-            <li class="active"><a href="tours.html"><i class="ico ico-tours"></i><span class="block">TOURS</span></a></li>
-            <li><a href="#flights"><i class="ico ico-flight"></i><span class="block">BOOK FLIGHTS</span></a></li>
+            <li><a href="tours.html"><i class="ico ico-tours"></i><span class="block">TOURS</span></a>
+              <div class="tour-form inline-text pos-abt form">
+                <form action="" method="POST" autocomplete="off" class="container">
+                  <div class="left">
+                    <label class="block">You can leave some fields blank.</label>
+                    <div><span>I’d like to visit</span>
+                      <input type="text" value="Europe" name="destination" size="5"><span>on</span>
+                      <input type="text" value="March 2015" name="date" size="5">
+                    </div>
+                    <div><span>Show me</span>
+                      <input type="text" value="winter" name="season" size="5"><span> destinations with</span>
+                      <input type="text" value="scenic view" name="view" size="5"><span> and</span>
+                      <input type="text" value="adventure" name="activity" size="5"><span> , sort by</span>
+                      <input type="text" value="price low to high" name="price" size="5">
+                    </div>
+                  </div>
+                  <div class="right"><a href="#" class="pull-left btn-submit btn btn-white m-auto m-l-lg"><span class="inline m-r-md m-l-xs text-u-c">Find Tours</span><i class="fa fa-angle-right"></i></a><a href="#" class="pull-right btn btn-white m-r-md"><span class="text-sm block m-l-sm">See All Tours</span></a></div>
+                </form>
+              </div>
+            </li>
+            <li class="active"><a href="#flights"><i class="ico ico-flight"></i><span class="block">BOOK FLIGHTS</span></a>
+              <div class="flight-form inline-text pos-abt form">
+                <form action="" method="POST" autocomplete="off" class="container">
+                  <div class="left">
+                    <div><span>I’d like to book a</span>
+                      <input type="text" value="two ways" size="5"><span>ticket from</span>
+                      <input type="text" value="jakarta" size="5"><span>to</span>
+                      <input type="text" value="type city" size="5"><span>on</span>
+                      <input type="text" value="02/01/15" size="5"><span>, returning on</span>
+                      <input type="text" value="type date" size="5"><span> for</span>
+                      <input type="text" value="one" name="activity" size="5"><span> adult and</span>
+                      <input type="text" value="no" name="price" size="5"><span> children in</span>
+                      <input type="text" value="economy" name="price" size="5"><span> class</span>
+                    </div>
+                  </div>
+                  <div class="right"><a href="#" class="pull-left btn-submit btn btn-white m-auto m-l-lg"><span class="inline m-r-md m-l-xs text-u-c">Find Flights</span><i class="fa fa-angle-right"></i></a><a href="#" class="pull-right btn btn-white m-l-md"><span class="block m-r-sm m-l-sm">Why Book With Us</span></a></div>
+                </form>
+              </div>
+            </li>
             <li><a href="#hotels" class="hotel"><i class="ico ico-hotel"></i><span class="block">BOOK HOTELS</span></a></li>
             <li><a href="#documents"><i class="ico ico-document"></i><span class="block">DOCUMENTS</span></a></li>
             <li><a href="#blog"><i class="ico ico-blog"></i><span class="block">BLOG</span></a></li>
           </ul>
-          <u class="nav navbar-nav navbar-right">
+          <ul class="nav navbar-nav navbar-right">
             <li><a href="login.html" class="b-r-white">Login</a></li>
             <li><a href="register.html">Register</a></li>
-          </u>
+          </ul>
         </div>
         <div class="clearfix"></div>
       </div>
-    </nav>
+    </div>
     <div class="home-page">
       <div class="hero-banner">
         <div class="flexslider">
@@ -69,11 +106,11 @@
           <h4 class="title-box c-text">Most Popular<span class="text-orange"> Destinations</span></h4>
           <div class="popular-destinations">
             <div class="col-md-6">
-              <div class="big-item row b-r-white"><img src="img/destinations/turkey.jpg" alt=""><a href="#" class="info yellow-box wrapper-md"><span class="block region text-u-c">MIddle East</span><span class="block m-t-xs text-u-c destination">Turkey Adventure</span><span class="block pricing text-u-c"><span class="title">From<strong> USD</strong></span><span class="block amount"><span class="currency">$</span><span class="price">1000</span></span></span></a></div>
+              <div class="big-item row b-r-white"><img src="img/destinations/Turkey.jpg" alt=""><a href="#" class="info yellow-box wrapper-md"><span class="block region text-u-c">MIddle East</span><span class="block m-t-xs text-u-c destination">Turkey Adventure</span><span class="block pricing text-u-c"><span class="title">From<strong> USD</strong></span><span class="block amount"><span class="currency">$</span><span class="price">1000</span></span></span></a></div>
             </div>
             <div class="col-md-6">
-              <div class="row square b-b-white"><a href="#" class="pull-left item b-r-white"><img src="img/destinations/japan.jpg" alt=""><span class="block info box-info pos-abt"><span class="block info-detail overlay text-u-c"><span class="block destination-type">Asia</span><span class="block location package block">Japan Essentials</span><span class="block pricing"><span>From</span><span class="currency"> USD</span><span class="price"> 2000</span></span></span></span></a><a href="#" class="pull-right item"><img src="img/destinations/pucket.jpg" alt=""><span class="block info box-info pos-abt"><span class="block info-detail overlay text-u-c"><span class="block destination-type">Asia</span><span class="block location package block">Bangkok Pucket</span><span class="block pricing"><span>From</span><span class="currency"> USD</span><span class="price"> 700</span></span></span></span></a></div>
-              <div class="row square"><a href="#" class="pull-left b-r-white item"><img src="img/destinations/france.jpg" alt=""><span class="block info box-info pos-abt"><span class="block info-detail overlay text-u-c"><span class="block destination-type">Europe</span><span class="block location package block">French Riviera</span><span class="block pricing"><span>From</span><span class="currency"> USD</span><span class="price"> 2000</span></span></span></span></a><a href="#" class="pull-right item"><img src="img/destinations/China.jpg" alt=""><span class="block info box-info pos-abt"><span class="block info-detail overlay text-u-c"><span class="block destination-type">Asia</span><span class="block location package block">China Delight</span><span class="block pricing"><span>From</span><span class="currency"> USD</span><span class="price"> 3000</span></span></span></span></a></div>
+              <div class="row square b-b-white"><a href="#" class="pull-left item b-r-white"><img src="img/destinations/Japan.jpg" alt=""><span class="block info box-info pos-abt"><span class="block info-detail overlay text-u-c"><span class="block destination-type">Asia</span><span class="block location package block">Japan Essentials</span><span class="block pricing"><span>From</span><span class="currency"> USD</span><span class="price"> 2000</span></span></span></span></a><a href="#" class="pull-right item"><img src="img/destinations/pucket.jpg" alt=""><span class="block info box-info pos-abt"><span class="block info-detail overlay text-u-c"><span class="block destination-type">Asia</span><span class="block location package block">Bangkok Pucket</span><span class="block pricing"><span>From</span><span class="currency"> USD</span><span class="price"> 700</span></span></span></span></a></div>
+              <div class="row square"><a href="#" class="pull-left b-r-white item"><img src="img/destinations/France.jpg" alt=""><span class="block info box-info pos-abt"><span class="block info-detail overlay text-u-c"><span class="block destination-type">Europe</span><span class="block location package block">French Riviera</span><span class="block pricing"><span>From</span><span class="currency"> USD</span><span class="price"> 2000</span></span></span></span></a><a href="#" class="pull-right item"><img src="img/destinations/China.jpg" alt=""><span class="block info box-info pos-abt"><span class="block info-detail overlay text-u-c"><span class="block destination-type">Asia</span><span class="block location package block">China Delight</span><span class="block pricing"><span>From</span><span class="currency"> USD</span><span class="price"> 3000</span></span></span></span></a></div>
             </div>
             <div class="clearfix"></div>
           </div>
@@ -114,7 +151,7 @@
             </div>
             <div class="col-md-6">
               <div class="row square b-b-white"><a href="#" class="pull-left b-r-white item"><img src="img/destinations/Europe.jpg" alt=""><span class="block info box-info pos-abt"><span class="block info-detail overlay text-u-c"><span class="block destination-type">Europe</span><span class="block location package block">Eastern Europe</span><span class="block pricing"><span>From</span><span class="currency"> USD</span><span class="price"> 2000</span></span></span></span></a><a href="#" class="pull-left item"><img src="img/destinations/Greece.jpg" alt=""><span class="block info box-info pos-abt"><span class="block info-detail overlay text-u-c"><span class="block destination-type">Europe</span><span class="block location package block">Mediteranian</span><span class="block pricing"><span>From</span><span class="currency"> USD</span><span class="price"> 2000</span></span></span></span></a></div>
-              <div class="row square"><a href="#" class="pull-left b-r-white item"><img src="img/destinations/france.jpg" alt=""><span class="block info box-info pos-abt"><span class="block info-detail overlay text-u-c"><span class="block destination-type">Europe</span><span class="block location package block">French Riviera</span><span class="block pricing"><span>From</span><span class="currency"> USD</span><span class="price"> 2000</span></span></span></span></a><a href="#" class="pull-right item"><img src="img/destinations/Paris.jpg" alt=""><span class="block info box-info pos-abt"><span class="block info-detail overlay text-u-c"><span class="block destination-type">Europe</span><span class="block location package block">West europe</span><span class="block pricing"><span>From</span><span class="currency"> USD</span><span class="price"> 2000</span></span></span></span></a></div>
+              <div class="row square"><a href="#" class="pull-left b-r-white item"><img src="img/destinations/France.jpg" alt=""><span class="block info box-info pos-abt"><span class="block info-detail overlay text-u-c"><span class="block destination-type">Europe</span><span class="block location package block">French Riviera</span><span class="block pricing"><span>From</span><span class="currency"> USD</span><span class="price"> 2000</span></span></span></span></a><a href="#" class="pull-right item"><img src="img/destinations/Paris.jpg" alt=""><span class="block info box-info pos-abt"><span class="block info-detail overlay text-u-c"><span class="block destination-type">Europe</span><span class="block location package block">West europe</span><span class="block pricing"><span>From</span><span class="currency"> USD</span><span class="price"> 2000</span></span></span></span></a></div>
             </div>
             <div class="clearfix"></div>
           </div>
