--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
   </head>
   <body>
-    <div role="navigation" class="navbar">
+    <div role="navigation" class="navbar navbar-fixed-top">
       <div class="container">
         <div class="navbar-header"><a href="index.html" title="TS Starter" class="navbar-brand"><img src="img/sapta-tour-logo.png" title="TS Starter"></a></div>
         <div id="navbar" class="collapse navbar-collapse">
@@ -42,7 +42,7 @@
                 </form>
               </div>
             </li>
-            <li class="active"><a href="#flights"><i class="ico ico-flight"></i><span class="block">BOOK FLIGHTS</span></a>
+            <li><a href="#flights"><i class="ico ico-flight"></i><span class="block">BOOK FLIGHTS</span></a>
               <div class="flight-form inline-text pos-abt form">
                 <form action="" method="POST" autocomplete="off" class="container">
                   <div class="left">
