fixing container page for sticky bar and booking page

--- a/app/tour-detail.html
+++ b/app/tour-detail.html
@@ -38,7 +38,7 @@
                       <input type="text" value="price low to high" name="price" size="5">
                     </div>
                   </div>
-                  <div class="right"><a href="#" class="pull-left btn-submit btn btn-white m-auto m-l-lg"><span class="inline m-r-md m-l-xs text-u-c">Find Tours</span><i class="fa fa-angle-right"></i></a><a href="#" class="pull-right btn btn-white m-r-md"><span class="text-sm block m-l-sm">See All Tours</span></a></div>
+                  <div class="right"><a href="tours.html" class="pull-left btn-submit btn btn-white m-auto m-l-lg"><span class="inline m-r-md m-l-xs text-u-c">Find Tours</span><i class="fa fa-angle-right"></i></a><a href="tours.html" class="pull-right btn btn-white m-r-md"><span class="text-sm block m-l-sm">See All Tours</span></a></div>
                 </form>
               </div>
             </li>
@@ -57,7 +57,7 @@
                       <input type="text" value="economy" name="price" size="5"><span> class</span>
                     </div>
                   </div>
-                  <div class="right"><a href="#" class="pull-left btn-submit btn btn-white m-auto m-l-lg"><span class="inline m-r-md m-l-xs text-u-c">Find Flights</span><i class="fa fa-angle-right"></i></a><a href="#" class="pull-right btn btn-white m-l-md"><span class="block m-r-sm m-l-sm">Why Book With Us</span></a></div>
+                  <div class="right"><a href="flights.html" class="pull-left btn-submit btn btn-white m-auto m-l-lg"><span class="inline m-r-md m-l-xs text-u-c">Find Flights</span><i class="fa fa-angle-right"></i></a><a href="flights.html" class="pull-right btn btn-white m-l-md"><span class="block m-r-sm m-l-sm">Why Book With Us</span></a></div>
                 </form>
               </div>
             </li>
@@ -73,7 +73,7 @@
         <div class="clearfix"></div>
       </div>
     </div>
-    <div class="tour-detail-page">
+    <div class="tour-detail-page p-t-70">
       <div class="container m-t-xl">
         <label class="wrapper-lg pad-b-n text-light text-u-c block text-center text-yellow">Europe</label>
         <h2 class="m-t-xs head-title text-center text-u-c">The Best of West Europe</h2>
@@ -263,7 +263,7 @@
             <div class="column column-3">
               <label class="text-u-c block">Price From</label><span class="block">USD $3000</span>
             </div>
-            <div class="column column-4"><a href="#" class="block text-u-c">Booking Inquiry</a></div>
+            <div class="column column-4"><a href="booking.html" class="block text-u-c">Booking Inquiry</a></div>
             <div class="clearfix"></div>
           </div>
           <div class="book-item">
@@ -282,7 +282,7 @@
             <div class="column column-3">
               <label class="text-u-c block">Price From</label><span class="block">USD $3000</span>
             </div>
-            <div class="column column-4"><a href="#" class="block text-u-c">Booking Inquiry</a></div>
+            <div class="column column-4"><a href="booking.html" class="block text-u-c">Booking Inquiry</a></div>
             <div class="clearfix"></div>
           </div>
           <div class="book-item">
@@ -301,12 +301,12 @@
             <div class="column column-3">
               <label class="text-u-c block">Price From</label><span class="block">USD $3000</span>
             </div>
-            <div class="column column-4"><a href="#" class="block text-u-c">Booking Inquiry</a></div>
+            <div class="column column-4"><a href="booking.html" class="block text-u-c">Booking Inquiry</a></div>
             <div class="clearfix"></div>
           </div>
           <div class="book-item">
             <div class="column column-own bg-white"><i class="ico ico-idea"></i><span class="block">Have your own preferences? Let us know what dates and airline are best for you.</span></div>
-            <div class="column column-yellow"><a href="#" class="block text-u-c">Booking Inquiry</a></div>
+            <div class="column column-yellow"><a href="booking.html" class="block text-u-c">Booking Inquiry</a></div>
             <div class="clearfix"></div>
           </div>
         </div>
@@ -373,9 +373,6 @@
               <h6 class="m-b-md">HARGA TERMSUK</h6>
               <ol>
                 <li>
-                  <p class="m-b-md">Harga Termasuk</p>
-                </li>
-                <li>
                   <p class="m-b-md">Ticket pesawat udara p.p. kelas ekonomi (non-endorsable, non-refundable & non-reroutable berdasarkan harga group / promosi).</p>
                 </li>
                 <li>
@@ -399,25 +396,28 @@
               <h6 class="m-b-md">HARGA TIDAK TERMSUK</h6>
               <ol>
                 <li>
-                  <p class="m-b-md">Harga Termasuk</p>
+                  <p class="m-b-md">Harga Tidak Termasuk</p>
                 </li>
                 <li>
-                  <p class="m-b-md">Ticket pesawat udara p.p. kelas ekonomi (non-endorsable, non-refundable & non-reroutable berdasarkan harga group / promosi).</p>
+                  <p class="m-b-md">Airport tax International &amp; Jakarta, fuel surcharge, dan tax lainnya.</p>
                 </li>
                 <li>
-                  <p class="m-b-md">Penginapan di hotel berdasarkan 2 (dua) orang dalam 1 kamar (twin sharing).</p>
+                  <p class="m-b-md">Asuransi perjalanan Zurich Insurance (11-15 days Individual USD 50 / Family USD 70).</p>
                 </li>
                 <li>
-                  <p class="m-b-md">Acara tour, transportasi dan makan sesuai yang tercantum dalam acara perjalanan. (MP – Makan Pagi; MS – Makan Siang; MM – Makan Malam).</p>
+                  <p class="m-b-md">Biaya dokumen perjalanan seperti : paspor, visa, entry permit, dll.</p>
                 </li>
                 <li>
-                  <p class="m-b-md">Berat maksimum sebesar 20kg untuk 1 bagasi atau sesuai dengan peraturan maskapai penerbangan yang digunakan; dan berat maksimum 7 kg untuk 1 handbag kecil untuk dibawa ke kabin pesawat atau sesuai dengan peraturan maskapai penerbangan yang digunakan.</p>
+                  <p class="m-b-md">Pengeluaran pribadi seperti : telepon, room service, laundry, mini bar, tambahan makanan dan minuman serta pengeluaran lainnya.</p>
                 </li>
                 <li>
-                  <p class="m-b-md">Satu buah tas cantik bagi setiap peserta.</p>
+                  <p class="m-b-md">Tour tambahan (Optional Tour) yang mungkin diadakan selama perjalanan.</p>
                 </li>
                 <li>
-                  <p class="m-b-md">Tour Leader dari SAPTA TOUR.</p>
+                  <p class="m-b-md">Excess baggage (biaya kelebihan barang bawaan di atas 20 kg), Biaya bea masuk yang dikenakan oleh duane di Jakarta maupun di negara yang dikunjungi. <br />Biaya Single Supplement.</p>
+                </li>
+                <li>
+                  <p class="m-b-md">PPN 1%.</p>
                 </li>
               </ol>
             </div>
