--- a/app/tours.html
+++ b/app/tours.html
@@ -38,7 +38,7 @@
                       <input type="text" value="price low to high" name="price" size="5">
                     </div>
                   </div>
-                  <div class="right"><a href="#" class="pull-left btn-submit btn btn-white m-auto m-l-lg"><span class="inline m-r-md m-l-xs text-u-c">Find Tours</span><i class="fa fa-angle-right"></i></a><a href="#" class="pull-right btn btn-white m-r-md"><span class="text-sm block m-l-sm">See All Tours</span></a></div>
+                  <div class="right"><a href="tours.html" class="pull-left btn-submit btn btn-white m-auto m-l-lg"><span class="inline m-r-md m-l-xs text-u-c">Find Tours</span><i class="fa fa-angle-right"></i></a><a href="tours.html" class="pull-right btn btn-white m-r-md"><span class="text-sm block m-l-sm">See All Tours</span></a></div>
                 </form>
               </div>
             </li>
@@ -57,7 +57,7 @@
                       <input type="text" value="economy" name="price" size="5"><span> class</span>
                     </div>
                   </div>
-                  <div class="right"><a href="#" class="pull-left btn-submit btn btn-white m-auto m-l-lg"><span class="inline m-r-md m-l-xs text-u-c">Find Flights</span><i class="fa fa-angle-right"></i></a><a href="#" class="pull-right btn btn-white m-l-md"><span class="block m-r-sm m-l-sm">Why Book With Us</span></a></div>
+                  <div class="right"><a href="flights.html" class="pull-left btn-submit btn btn-white m-auto m-l-lg"><span class="inline m-r-md m-l-xs text-u-c">Find Flights</span><i class="fa fa-angle-right"></i></a><a href="flights.html" class="pull-right btn btn-white m-l-md"><span class="block m-r-sm m-l-sm">Why Book With Us</span></a></div>
                 </form>
               </div>
             </li>
@@ -73,7 +73,7 @@
         <div class="clearfix"></div>
       </div>
     </div>
-    <div class="tours-page">
+    <div class="tours-page p-t-70">
       <div class="banner">
         <h3 class="text-white text-center">International Destinations</h3>
       </div>
