finished booking page

--- a/app/booking.html
+++ b/app/booking.html
@@ -74,6 +74,7 @@
       </div>
     </div>
     <div class="booking-page">
+      <div class="wrapping-gray"></div>
       <div class="container display-table">
         <div class="content-left display-cell p-t-70 b-r">
           <p class="m-b-lg"><strong class="f-bold">Perhatian:</strong> Harga yang tertera adalah sebagai perkiraan terdekat. Dengan menekan tombol Make Booking, Anda akan terdaftar sebagai peminat. Customer Service kami akan menghubungi Anda via telepon/Email. Transaksi akhir tidak dilakukan di website ini.</p>
@@ -138,6 +139,22 @@
         </div>
         <div class="aside display-cell p-t-70">
           <h5 class="m-t-xs m-b-lg text-rounded">Tour Details</h5>
+          <ul class="list-unstyled tour-ticket">
+            <li class="text-center"><span class="block">The Best</span><span class="block">Of West Europe</span></li>
+            <li class="bg-light bg-white"><i class="ico ico-departure"></i><span class="inline">Kamis, 12 Feb ‘15</span></li>
+            <li class="bg-light bg-white"><i class="ico ico-return"></i><span class="inline">Minggu, 22 Feb ‘15</span></li>
+            <li class="bg-white"><i class="ico ico-time"></i><span class="inline">10 Days</span></li>
+            <li class="bg-white"><i class="ico ico-airline-circle"></i><span class="inline">Garuda Indonesia</span></li>
+            <li class="bg-white"><i class="ico ico-adult"></i><span class="inline"><span id="count-adult">2</span> Person</span></li>
+          </ul>
+          <ul class="list-unstyled tour-pricing m-t-lg">
+            <li><span class="block">Total Price</span></li>
+            <li><span class="block gray text-u-c">2 Adults Twin Share</span><span class="block light">2 x USD 3000</span><strong class="block">$ 6000</strong></li>
+            <li><span class="block gray text-u-c">Indonesia Airport Tax</span><span class="block light">2 x Rp 100,000</span><strong class="block">Rp 200,000</strong></li>
+            <li><span class="block gray text-u-c">International Airport Tax</span><span class="block light">2 x USD 500</span><strong class="block">USD 1000</strong></li>
+            <li><span class="block gray text-u-c">Total Price</span><span class="block text-primary pricing"><span class="currency">USD</span><span class="price"><span>$</span><span class="number">7020</span></span></span></li>
+          </ul>
+          <p class="m-t-lg">Pihak Tour tetap dapat meng-update harga. Harga final akan Anda dapatkan langsung dari Customer Service kami</p>
         </div>
       </div>
     </div>
