--- a/app/tour-detail.html
+++ b/app/tour-detail.html
@@ -253,7 +253,7 @@
                 <label class="text-u-c block">Departure</label><span class="block date">Kamis,&nbsp;<strong>12 Feb 2015</strong></span>
               </div>
               <div class="arrow"></div>
-              <div class="return pos-rlt bg-white pull-right"><i class="ico ico-retrun"></i>
+              <div class="return pos-rlt bg-white pull-right"><i class="ico ico-return"></i>
                 <label class="text-u-c block">Return</label><span class="block date">Selasa, &nbsp;<strong>22 Feb 2015</strong></span>
               </div>
             </div>
@@ -272,7 +272,7 @@
                 <label class="text-u-c block">Departure</label><span class="block date">Kamis,&nbsp;<strong>12 Feb 2015</strong></span>
               </div>
               <div class="arrow"></div>
-              <div class="return pos-rlt bg-white pull-right"><i class="ico ico-retrun"></i>
+              <div class="return pos-rlt bg-white pull-right"><i class="ico ico-return"></i>
                 <label class="text-u-c block">Return</label><span class="block date">Selasa, &nbsp;<strong>22 Feb 2015</strong></span>
               </div>
             </div>
@@ -291,7 +291,7 @@
                 <label class="text-u-c block">Departure</label><span class="block date">Kamis,&nbsp;<strong>12 Feb 2015</strong></span>
               </div>
               <div class="arrow"></div>
-              <div class="return pos-rlt bg-white pull-right"><i class="ico ico-retrun"></i>
+              <div class="return pos-rlt bg-white pull-right"><i class="ico ico-return"></i>
                 <label class="text-u-c block">Return</label><span class="block date">Selasa, &nbsp;<strong>22 Feb 2015</strong></span>
               </div>
             </div>
