blog details page

--- a/app/index.html
+++ b/app/index.html
@@ -63,7 +63,7 @@
             </li>
             <li><a href="#hotels" class="hotel"><i class="ico ico-hotel"></i><span class="block">BOOK HOTELS</span></a></li>
             <li><a href="#documents"><i class="ico ico-document"></i><span class="block">DOCUMENTS</span></a></li>
-            <li><a href="#blog"><i class="ico ico-blog"></i><span class="block">BLOG</span></a></li>
+            <li><a href="blog.html"><i class="ico ico-blog"></i><span class="block">BLOG</span></a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="login.html" class="b-r-white">Login</a></li>
