--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
   <body>
     <div role="navigation" class="navbar navbar-fixed-top">
       <div class="container">
-        <div class="navbar-header"><a href="index.html" title="TS Starter" class="navbar-brand"><img src="img/sapta-tour-logo.png" title="TS Starter"></a></div>
+        <div class="navbar-header"><a href="index.html" title="TS Starter" class="navbar-brand"><img src="img/sapta-tour-logo.png" title="TS Starter"/></a></div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav main-menu">
             <li><a href="tours.html"><i class="ico ico-tours"></i><span class="block">TOURS</span></a>
@@ -28,33 +28,33 @@
                   <div class="left">
                     <label class="block">You can leave some fields blank.</label>
                     <div><span>I’d like to visit</span>
-                      <input type="text" value="Europe" name="destination" size="5"><span>on</span>
-                      <input type="text" value="March 2015" name="date" size="5">
+                      <input type="text" value="Europe" name="destination" size="5"/><span>on</span>
+                      <input type="text" value="March 2015" name="date" size="5"/>
                     </div>
                     <div><span>Show me</span>
-                      <input type="text" value="winter" name="season" size="5"><span> destinations with</span>
-                      <input type="text" value="scenic view" name="view" size="5"><span> and</span>
-                      <input type="text" value="adventure" name="activity" size="5"><span> , sort by</span>
-                      <input type="text" value="price low to high" name="price" size="5">
+                      <input type="text" value="winter" name="season" size="5"/><span> destinations with</span>
+                      <input type="text" value="scenic view" name="view" size="5"/><span> and</span>
+                      <input type="text" value="adventure" name="activity" size="5"/><span> , sort by</span>
+                      <input type="text" value="price low to high" name="price" size="5"/>
                     </div>
                   </div>
                   <div class="right"><a href="tours.html" class="pull-left btn-submit btn btn-white m-auto m-l-lg"><span class="inline m-r-md m-l-xs text-u-c">Find Tours</span><i class="fa fa-angle-right"></i></a><a href="tours.html" class="pull-right btn btn-white m-r-md"><span class="text-sm block m-l-sm">See All Tours</span></a></div>
                 </form>
               </div>
             </li>
-            <li><a href="#flights"><i class="ico ico-flight"></i><span class="block">BOOK FLIGHTS</span></a>
+            <li><a href="flights.html"><i class="ico ico-flight"></i><span class="block">BOOK FLIGHTS</span></a>
               <div class="flight-form inline-text pos-abt form">
                 <form action="" method="POST" autocomplete="off" class="container">
                   <div class="left">
                     <div><span>I’d like to book a</span>
-                      <input type="text" value="two ways" size="5"><span>ticket from</span>
-                      <input type="text" value="jakarta" size="5"><span>to</span>
-                      <input type="text" value="type city" size="5"><span>on</span>
-                      <input type="text" value="02/01/15" size="5"><span>, returning on</span>
-                      <input type="text" value="type date" size="5"><span> for</span>
-                      <input type="text" value="one" name="activity" size="5"><span> adult and</span>
-                      <input type="text" value="no" name="price" size="5"><span> children in</span>
-                      <input type="text" value="economy" name="price" size="5"><span> class</span>
+                      <input type="text" value="two ways" size="5"/><span>ticket from</span>
+                      <input type="text" value="jakarta" size="5"/><span>to</span>
+                      <input type="text" value="type city" size="5"/><span>on</span>
+                      <input type="text" value="02/01/15" size="5"/><span>, returning on</span>
+                      <input type="text" value="type date" size="5"/><span> for</span>
+                      <input type="text" value="one" name="activity" size="5"/><span> adult and</span>
+                      <input type="text" value="no" name="price" size="5"/><span> children in</span>
+                      <input type="text" value="economy" name="price" size="5"/><span> class</span>
                     </div>
                   </div>
                   <div class="right"><a href="flights.html" class="pull-left btn-submit btn btn-white m-auto m-l-lg"><span class="inline m-r-md m-l-xs text-u-c">Find Flights</span><i class="fa fa-angle-right"></i></a><a href="flights.html" class="pull-right btn btn-white m-l-md"><span class="block m-r-sm m-l-sm">Why Book With Us</span></a></div>
@@ -132,7 +132,7 @@
                 <div class="text-u-c more-info">Immense yourself in A breathtaking Nation Like  no other</div>
                 <div class="line"></div><a href="#" class="block info-detail text-u-c">
                   <div class="destination-type">Domestic</div>
-                  <div class="location package block wrapper-sm">Karimun Jawa 4d/5n</div>
+                  <div class="location package block">Karimun Jawa 4d/5n</div>
                   <div class="pricing"><span>From</span><span class="currency"> USD</span><span class="price"> 400</span></div></a>
               </div>
             </div>
@@ -187,32 +187,32 @@
             <div class="row"><a href="#" class="block btn-show-more c-text">Show me more<strong> Hotels</strong></a></div>
           </div>
           <div class="clearfix"></div>
-        </div>
-        <div class="featured blog-inspirations">
-          <h4 class="title-box c-text">Need<span class="text-orange"> Inspirations ?</span></h4>
-          <div class="row">
-            <div class="col-md-6 blog-item pos-rlt"><img src="img/destinations/Prague-02.jpg" alt="">
-              <div class="pos-rlt post-header bg-orange">
-                <div class="post-item text-darker pos-abt text-u-c wrapper">
-                  <label class="inline m-l-sm f-normal text-u-c">Blog</label>
-                  <h3 class="wrapper-sm m-t-none"><a href="blog-detail.html" class="text-darker">Top 10 most romantic Destinations in the world</a></h3>
+          <div class="featured blog-inspirations">
+            <h4 class="title-box c-text">Need<span class="text-orange"> Inspirations ?</span></h4>
+            <div class="row">
+              <div class="col-md-6 blog-item pos-rlt"><img src="img/destinations/Prague-02.jpg" alt="">
+                <div class="pos-rlt post-header bg-orange">
+                  <div class="post-item text-darker pos-abt text-u-c wrapper">
+                    <label class="inline m-l-sm f-normal text-u-c">Blog</label>
+                    <h3 class="m-l-sm m-t-none"><a href="blog-detail.html" class="text-darker">Top 10 most romantic Destinations in the world</a></h3>
+                  </div>
                 </div>
               </div>
+              <div class="col-md-6 blog-item pos-rlt"><img src="img/destinations/Asia.jpg" alt="">
+                <div class="pos-rlt post-header bg-orange">
+                  <div class="post-item text-darker pos-abt text-u-c wrapper">
+                    <label class="inline m-l-sm f-normal text-u-c">Blog</label>
+                    <h3 class="m-l-sm m-t-none"><a href="blog-detail.html" class="text-darker">Japan Off the beaten tracks</a></h3>
+                  </div>
+                </div>
+              </div>
+              <div class="clearfix"></div>
             </div>
-            <div class="col-md-6 blog-item pos-rlt"><img src="img/destinations/Asia.jpg" alt="">
-              <div class="pos-rlt post-header bg-orange">
-                <div class="post-item text-darker pos-abt text-u-c wrapper">
-                  <label class="inline m-l-sm f-normal text-u-c">Blog</label>
-                  <h3 class="wrapper-sm m-t-none"><a href="blog-detail.html" class="text-darker">Japan Off the beaten tracks</a></h3>
-                </div>
-              </div>
+            <div class="col-md-12">
+              <div class="row"><a href="#" class="block btn-show-more c-text">Show me more<strong> Inspirations</strong></a></div>
             </div>
             <div class="clearfix"></div>
           </div>
-          <div class="col-md-12">
-            <div class="row"><a href="#" class="block btn-show-more c-text">Show me more<strong> Inspirations</strong></a></div>
-          </div>
-          <div class="clearfix"></div>
         </div>
       </div>
     </div>
